--- a/MaritimeDataApp/MaritimeDataApp.Server/appsettings.json
+++ b/MaritimeDataApp/MaritimeDataApp.Server/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    // db on localhost
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=MaritimeDataDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  }
 }
